<resources>
    <string name="app_name">SadekLockApp</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="TypePass">Type Your Password</string>
    <string name="RetypePass">Retype Your Password</string>
    <string name="LogIn">Log In</string>
    <string name="Register">Register</string>
    <string name="SadekLock">SadekLock 🔒︎</string>
    <string name="NotYetRegistered">Not registered yet? Sign up!</string>
    <string name="AlreadyRegistered">Already registered? Log in!</string>
    <string name="History">History</string>
    <string name="Home">Home</string>
    <string name="Users">Users</string>
    <string name="Settings">Settings</string>
    <string name="LogOut">Log Out</string>
    <string name="UserInfo">User Info</string>
    <string name="night_mode">Night Mode</string>

    <!--  Tak do testow   -->
    <string name="XD">XD</string>

    <!--  Nowe elementy  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uid">UID:</string>
    <string name="unknown">Unknown</string>
    <string name="_00_00_00_00">00 00 00 00</string>
    <string name="user_2">User 2</string>
    <string name="name">Name:</string>
    <string name="user_1">User 1</string>
    <string name="user_3">User 3</string>
    <string name="user_4">User 4</string>
    <string name="user_5">User 5</string>
</resources>