<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="top"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_1"
                        android:textColor="@color/green_dark"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/name"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/nameUser1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/unknown"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/uid"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/uidUser1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/_00_00_00_00"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/user1Edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_edit" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_2"
                        android:textColor="@color/green_dark"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/name"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/nameUser2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/unknown"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/uid"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/uidUser2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/_00_00_00_00"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/user2Edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_edit" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_3"
                        android:textColor="@color/green_dark"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/name"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/nameUser3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/unknown"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/uid"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/uidUser3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/_00_00_00_00"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/user3Edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_edit" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_4"
                        android:textColor="@color/green_dark"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/name"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/nameUser4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/unknown"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/uid"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/uidUser4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/_00_00_00_00"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/user4Edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_edit" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_5"
                        android:textColor="@color/green_dark"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/name"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/nameUser5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/unknown"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/uid"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/uidUser5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/_00_00_00_00"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/user5Edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_edit" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>